--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-countup": "^6.5.0",
+    "react-dom": "^18",
+    "react-icons": "^4.12.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
